--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.2",
     "@sendgrid/mail": "^7.7.0",
+    "@types/firebase": "^3.2.1",
     "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
+    "firebase": "^9.22.1",
     "moment": "^2.29.4",
     "mongodb": "^4.10.0",
     "mongoose": "^6.6.5",
@@ -22,6 +24,8 @@
     "next-session": "^4.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-firebase-hooks": "^5.1.1",
+    "react-firebaseui": "^6.0.0",
     "react-howler": "^5.2.0",
     "react-icons": "^4.7.1",
     "react-query": "^3.39.2",
