--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,8 @@ yarn-error.log*
 .pnpm-debug.log*
 
 # local env files
-.env*.local
+.env*.local 
+# //hook1 - nie jest to niebezpeiczne?, zeby dodawac env file tam?
 
 # vercel
 .vercel
