--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wrld-react-app",
+  "name": "mi-amigo-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,30 +10,30 @@
     "compile:sass": "sass --watch src/styles/sass/styles-all.module.scss src/styles/css/styles-all.css"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^1.9.2",
-    "@sendgrid/mail": "^7.7.0",
-    "@types/firebase": "^3.2.1",
-    "date-fns": "^2.29.3",
-    "dotenv": "^16.0.3",
-    "firebase": "^9.1.3",
-    "moment": "^2.29.4",
-    "mongodb": "^4.10.0",
-    "mongoose": "^6.6.5",
-    "next": "^12.3.1",
-    "next-auth": "^4.22.1",
-    "next-session": "^4.0.5",
+    "@reduxjs/toolkit": "1.9.2",
+    "@sendgrid/mail": "7.7.0",
+    "@types/firebase": "3.2.1",
+    "date-fns": "2.29.3",
+    "dotenv": "16.0.3",
+    "firebase": "9.1.3",
+    "moment": "2.29.4",
+    "mongodb": "4.10.0",
+    "mongoose": "6.6.5",
+    "next": "12.3.1",
+    "next-auth": "4.22.1",
+    "next-session": "4.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-firebase-hooks": "^5.1.1",
-    "react-firebaseui": "^6.0.0",
-    "react-howler": "^5.2.0",
-    "react-icons": "^4.9.0",
-    "react-query": "^3.39.2",
-    "react-redux": "^8.0.5",
-    "react-router-dom": "^5.3.4",
-    "react-transition-group": "^4.4.5",
-    "redux": "^4.2.1",
-    "swr": "^1.3.0"
+    "react-firebase-hooks": "5.1.1",
+    "react-firebaseui": "6.0.0",
+    "react-howler": "5.2.0",
+    "react-icons": "4.9.0",
+    "react-query": "3.39.2",
+    "react-redux": "8.0.5",
+    "react-router-dom": "5.3.4",
+    "react-transition-group": "4.4.5",
+    "redux": "4.2.1",
+    "swr": "1.3.0"
   },
   "devDependencies": {
     "@types/node": "18.8.3",
@@ -41,11 +41,11 @@
     "@types/react-dom": "18.0.6",
     "eslint": "8.25.0",
     "eslint-config-next": "12.3.1",
-    "sass": "^1.57.1",
-    "ts-loader": "^9.4.1",
-    "typescript": "^4.8.4",
-    "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.11.1"
+    "sass": "1.57.1",
+    "ts-loader": "9.4.1",
+    "typescript": "4.8.4",
+    "webpack": "5.74.0",
+    "webpack-cli": "4.10.0",
+    "webpack-dev-server": "4.11.1"
   }
 }
