--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-firebaseui": "6.0.0",
     "react-howler": "5.2.0",
     "react-icons": "4.9.0",
+    "react-loader-spinner": "^5.3.4",
     "react-query": "3.39.2",
     "react-redux": "8.0.5",
     "react-router-dom": "5.3.4",
