--- a/package.json
+++ b/package.json
@@ -16,9 +16,6 @@
     "date-fns": "2.29.3",
     "dotenv": "16.0.3",
     "firebase": "9.1.3",
-    "moment": "2.29.4",
-    "mongodb": "4.10.0",
-    "mongoose": "6.6.5",
     "next": "12.3.1",
     "next-auth": "4.22.1",
     "next-session": "4.0.5",
@@ -26,15 +23,12 @@
     "react-dom": "18.2.0",
     "react-firebase-hooks": "5.1.1",
     "react-firebaseui": "6.0.0",
-    "react-howler": "5.2.0",
     "react-icons": "4.9.0",
     "react-loader-spinner": "^5.3.4",
-    "react-query": "3.39.2",
     "react-redux": "8.0.5",
     "react-router-dom": "5.3.4",
     "react-transition-group": "4.4.5",
-    "redux": "4.2.1",
-    "swr": "1.3.0"
+    "redux": "4.2.1"
   },
   "devDependencies": {
     "@types/node": "18.8.3",
