--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
     "noImplicitThis": true, // raise error on ‘this’ expressions with an implied ‘any’ type. For example if you structure your class badly
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noImplicitReturns": true,
+    "noImplicitReturns": true, //
     "noFallthroughCasesInSwitch": true,
     "noEmitOnError": true,
     "sourceMap": true,
