--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@reduxjs/toolkit": "1.9.2",
     "@sendgrid/mail": "7.7.0",
     "@types/firebase": "3.2.1",
-    "date-fns": "2.29.3",
     "dotenv": "16.0.3",
     "firebase": "9.1.3",
     "next": "12.3.1",
@@ -27,6 +26,7 @@
     "react-loader-spinner": "^5.3.4",
     "react-redux": "8.0.5",
     "react-router-dom": "5.3.4",
+    "react-toastify": "^9.1.3",
     "react-transition-group": "4.4.5",
     "redux": "4.2.1"
   },
