--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "test": "jest --watch",
     "lint": "next lint",
     "compile:sass": "sass --watch src/styles/sass/styles-all.module.scss src/styles/css/styles-all.css"
   },
@@ -24,14 +25,19 @@
     "react-firebase-hooks": "5.1.1",
     "react-firebaseui": "6.0.0",
     "react-icons": "4.9.0",
-    "react-loader-spinner": "^5.3.4",
+    "react-loader-spinner": "5.3.4",
     "react-redux": "8.0.5",
     "react-router-dom": "5.3.4",
-    "react-toastify": "^9.1.3",
+    "react-toastify": "9.1.3",
     "react-transition-group": "4.4.5",
     "redux": "4.2.1"
   },
   "devDependencies": {
+    "jest": "29.6.0",
+    "@testing-library/jest-dom": "5.14.1",
+    "@testing-library/react": "13.0.0",
+    "@testing-library/user-event": "14.3.0",
+    "@types/jest": "27.0.1",
     "@types/node": "18.8.3",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
