--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/firebase": "3.2.1",
     "dotenv": "16.0.3",
     "firebase": "9.1.3",
+    "jest-cli": "^29.6.0",
     "next": "12.3.1",
     "next-auth": "4.22.1",
     "next-session": "4.0.5",
@@ -28,14 +29,14 @@
     "react-loader-spinner": "5.3.4",
     "react-redux": "8.0.5",
     "react-router-dom": "5.3.4",
-    "react-toastify": "9.1.3",
+    "react-toastify": "^9.1.3",
     "react-transition-group": "4.4.5",
     "redux": "4.2.1"
   },
   "devDependencies": {
-    "jest": "29.6.0",
-    "@testing-library/jest-dom": "5.14.1",
-    "@testing-library/react": "13.0.0",
+    "@babel/preset-react": "^7.22.5",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "14.3.0",
     "@types/jest": "27.0.1",
     "@types/node": "18.8.3",
@@ -43,6 +44,8 @@
     "@types/react-dom": "18.0.6",
     "eslint": "8.25.0",
     "eslint-config-next": "12.3.1",
+    "jest": "^29.6.0",
+    "jest-environment-jsdom": "^29.6.0",
     "sass": "1.57.1",
     "ts-loader": "9.4.1",
     "typescript": "4.8.4",
